--- a/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
@@ -37,6 +37,9 @@
   <p><a href="lec-1bp.html" class="js-vgu2025-cpp">(30.10.2025 чт) 2гр Практика по занятию 1. Паттерны</a></p>
   <p><a href="lec-2b.html" class="js-vgu2025-cpp">(31.10.2025 пт) 2гр Занятие 2. Паттерны. Команда</a></p>
   <p><a href="lec-2bp.html" class="js-vgu2025-cpp">(06.11.2025 пт) 2гр Практика по занятию 2. Паттерны. Команда</a></p>
+  <p><a href="lec-3b.html" class="js-vgu2025-cpp">(07.11.2025 пт) 2гр Занятие 3. Многопоточность</a></p>
+  <p><a href="lec-2ap.html" class="js-vgu2025-cpp">(10.11.2025 пн) 1гр Практика по занятию 2. Наследование</a></p>
+  <p><a href="lec-3a.html" class="js-vgu2025-cpp">(11.10.2025 вт) 1гр Занятие 3. Паттерны</a></p>
   <p><a href="m1.html" class="js-vgu2025-cpp">Конспект методички ч1</a></p>
   <p><a href="m2.html" class="js-vgu2025-cpp">Конспект методички ч2</a></p>
 </article>
