--- a/src/components/front/front-edu/pages/vgu2025cpp/lec1a.html
+++ b/src/components/front/front-edu/pages/vgu2025cpp/lec1a.html
@@ -9,6 +9,7 @@
 <article class="article">
   <p>1 группа. 15.00 - 18.30</p>
   <h2>Классы</h2>
+  <p>Преподаватель - Авсеева Ольга Владимировна</p>
 </article>
 
 
