--- a/src/components/front/front-edu/pages/vgu2025cpp/lec2a.html
+++ b/src/components/front/front-edu/pages/vgu2025cpp/lec2a.html
@@ -9,6 +9,7 @@
 <article class="article">
   <p>1 группа. 17.00 - 20.00</p>
   <h2>Наследование</h2>
+  <p>Преподаватель - Авсеева Ольга Владимировна</p>
 </article>
 
 
