--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2008.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2008.html
@@ -11,6 +11,8 @@
 
   <p><a href="#p1">Урок 1</a></p>
   <p><a href="#p2">Урок 2</a></p>
+  <p><a href="#p3">Урок 3</a></p>
+  <p><a href="#p4">Урок 4</a></p>
 
 </article>
 
@@ -140,5 +142,186 @@
   </ol>
 
   <h4>2.3 Закладка Win32</h4>
-  <p>Компоненты данной закладки обеспечивают подключение интерфейсных элементов, используемых в 32 разрядных версиях операционной системы Windows.</p>
+  <p>Компоненты данной закладки обеспечивают подключение интерфейсных элементов, используемых в 32 разрядных версиях операционной системы Windows. Использование этих компонентов придаст вашей программме современный и профессиональный вид.</p>
+  <ol>
+    <li>TabContrlol вкладки - перекрывающие друг друга закладки для создания интерфейса в стиле самой палитры компонентов.</li>
+    <li>PageControl управление страницами - контейнер для размещения дочерних страниц программы. Позволяет перелистывать страницы на главной форме.</li>
+    <li>ImageList колекция изображений создает невидимый контейнер для набора графических изображений одинакового размера с возможностью выбора изображения из списка.</li>
+    <li>TrackBar регулятор создает шкалу с метками и регулятор текущего положения.</li>
+    <li>ProgressBar индикатор прогресса создает прямоугольный индикатор. Для отображения процесса выполнения процедур в программе.</li>
+    <li>UpDown спаренные кнопки для создания интерфейсных элементов с возможностью увеличения и уменьшения значения.</li>
+    <li>Animate аниматор создает невидимый контейнер для воспроизведения видеозаписей в формате avi.</li>
+    <li>MonthCalendar календарь создает календарь в стиле Windows98, который перелистывавется с помощью специальных кнопок.</li>
+    <li>TreeView древовидная структура создает иерархическую древовидную систему отображения.</li>
+    <li>ListView табличный список создает список элементов с отображением в различных стилях</li>
+    <li>Status bar панель статуса создает контейнер, по умолчанию внизу формы, в котором отображается статусная информация</li>
+    <li>ToolBar панель инструментов создает контейнер с кнопками типа SpeedButton</li>
+  </ol>
+
+  <h4>2.4 Закладка System</h4>
+  <p>Компоненты с закладки System подключают к программе специальных элементов управления и межпрограммного интерфейса.</p>
+  <ol>
+    <li>Timer таймер создает элемент, который отслеживает временные интервалы.</li>
+    <li>PaintBox канва рисования это основной графический компонент, предназначенный для рисования на канве.</li>
+    <li>MediaPlayer панель мультимедиа это компонент для управления всеми устройствами мультимедиа.</li>
+    <li>OleContainer контейнер Ole реализует компонент Ole, с помощью которого передаются данные от одной программы другой в ОС Windows.</li>
+    <li>DdeClientConv клиент Dde реализует механизм Dde, являющийся расширением ОС Windows и предназначен для передачи данных от одной программы сервера к другой - приемнику.</li>
+    <li>DdeClientItem элемент данных клиента Dde определяет элемент динамического обмена данными  между клиентами</li>
+    <li>DdeServerConv сервер Dde устанавливает режим динамического обмена между программами сервера Dde</li>
+    <li>DdeServerItem элемент данных сервера Dde определяет элемент динамического обмена данными Dde сервера.</li>
+  </ol>
+
+  <h4>2.5 Закладка Data Access</h4>
+  <p>C++Builder поддерживает следующие механизмы посредники для построения баз данных: 32-х разрядный быстродействующий механизм Bde (Borland Database Engine), технологию хранилища объектов Ado (ActiveX Data Object) и технологию доступа к набору данных. Эти механизмы берут на себя проблемы физического обслуживания баз данных.</p>
+  <p>Компоненты закладок Data Access и Data Control служат для управления доступом к базам данных.</p>
+  <ol>
+    <li>DataSource источник данных это интерфейс между видимыми компонентами баз данных, размещенными на форме и прочими компонентами доступа.</li>
+    <li>StoredProc хранимые процедуры позволяют выполнять процедуры, хранимые на сервере, передавая результаты клиенту. Продходящие кандидаты для этих процедур - операции над большими группами строк в таблице базы данных, агрегатные или математические функции</li>
+    <li>DataBase база данных используется для выдачи специфических команд управления базы данных и для создания временного локального псевдонима какой-либо удаленной базы данных.</li>
+  </ol>
+
+  <h4>Закладка Data Control</h4>
+  <p>Компоненты на закладке Data Control содержат элементы управления визуализацией и редактирования базы данных.</p>
+  <ol>
+    <li>DBGrid сетка. Компонент для создания регулярной сетки, в которой отображается набор данных.</li>
+    <li>DBNavigator навигатор. Компонент обеспечивает ту степень функциональности, в которой нуждается любое современное приложение баз данных. Представляет собой стандартизованную панел управления элементами базы данных.</li>
+    <li>DBEdit редактируемое поле создает прямоугольную область для редактирования короткого поля в текущей записи набора данных</li>
+  </ol>
+
+  <h4>2.6 Закладка Internet Express</h4>
+  <p>Компоненты с закладок Internet Express и Internet позволяют построить приложение в архитектуре клиент-сервер по протоколам TCP/IP и HTTP, а также построить распределенное сетевое приложение, веб-сервер которого будет выступать в роли клиентского приложения Midos.</p>
+  <ol>
+    <li>XMLBroker XML брокер это пакеты данных от провайдера сервисного приложения с кодировкой пакетов в XML</li>
+    <li>InetXPageProducer продюсер страницы Midos генерирует страницу html с информацией, полученной от сервисного приложения Midos</li>
+  </ol>
+
+  <h4>Закладка Internet</h4>
+  <ol>
+    <li>ClientSocket Клиент TCP/IP превращает приложение в клиента сетевого соединения по протоколу TCP/IP, который отвечает за надежное соединение между двумя концевыми процессами.</li>
+    <li>ServerSocket Сервер TCP/IP превращает приложение в сервер TCP/IP, который прослушивает определенный порт и в ответ на запрос устанавливает соединение.</li>
+    <li>WebDispetcher Диспетчер запросов http позволяет построить приложение способное реагировать на входящее сообщение клиента по протоколу http</li>
+    <li>QueryTableProducer Продюсер таблиц по запросу производит страницу команд гипертекста для отображение результирующего набора данных.</li>
+    <li>StpWebBrowser сетевой проводник открывает указанный документ xml в окне браузера Internet Explorer</li>
+  </ol>
+
+  <h4>2.7 Закладка Dialogs</h4>
+  <p>С помощью компонентов с закладки Dialogs создаются диалоги с пользователем ваших приложений. В основном используют первые два типа диалогов. В сложных программах понядобатся и остальные. Есть 10 стандартных диалогов</p>
+  <ol>
+    <li>OpenDialog открыть файл это диалог открытия файла с возможностью определения фильтров на имена файлов.</li>
+    <li>SaveDialog сохранить файл это диалог для выбора имени файла для сохранения.</li>
+    <li>OpenPictureDialog открыть изображение это диалог для открытия файлов с изображением с возможностью предварительного просмотра изображения в окне диалога.</li>
+    <li>SavePictureDialog сохранить изображение это диалог для выбора имени файла для сохранения с возможностью предварительного просмотра изображения в окне диалога.</li>
+    <li>FontDialog выбор шрифта это стандартный диалог выбора шрифта в вашей программе.</li>
+    <li>ColorDialog выбор цвета это диалог для выбора цвета из текущей палитры цветов Windows. Полученное значение можно передать любому компоненту с аналогичным свойством.</li>
+    <li>PrintDialog печать позволяет выбрать принтер и распечатать файл.</li>
+    <li>PrintSetupDialog установка принтера выполняет настройки параметров принтера</li>
+    <li>FindDialog поиск открывает диалог поиска текста с настройками параметров поиска.</li>
+    <li>ReplaceDialog замена открывает диалог поиска текста с возможностью замены</li>
+  </ol>
+
+  <h4>2.8 Закладка Samples</h4>
+  <p>На закладке Samples собраны специализированные модификации элементов управления. Созданные вами дополнительные компоненты будут установленны именно на эту панель. Но даже об имеющихся здесь компонентах справочная информация не содержит никаких данных.</p>
+  <ol>
+    <li>Pie секторная диаграмма представляет простейший вариант диаграммы. В компоненте имеется встроенный редактор, с помощью которого можно изменить углы секторов на стадии проектирования.</li>
+    <li>TrayIcon посзовляет создавать приложения, которые имеют свою пиктограмму на панели задач ОС Windows и работают в резидентном режиме.</li>
+    <li>PerformanceGraph график производительности позволяет наглядно просмотреть использование ресурсов компьютера: процессора, оперативной памяти и жесткого диска.</li>
+    <li>CGauge индикатор предназначен для отображения изменения какой-либо переменной в программе. Возможно изменение вида индикатора, с помощью свойства kind компонента.</li>
+    <li>CDirectoryOutline дерево каталогов это гибрид TreeView и Outline и позволяет отобразить древовидную структуру каталогов уже на стадии проектирования</li>
+    <li>CCalendar календарь это красивая разновидность месячного календаря MonthCalendar</li>
+  </ol>
+
+  <h4>2.9 Закладка Office2k</h4>
+  <p>На закладке Office2k собраны компоненты позволяющие интегрировать свои приложения с программами из пакета Microsoft Office.</p>
+  <p>Группа компонентов Word позволяет работать с документами, созданными в программе Word</p>
+  <p>Группа компонентов Access позволяет работать с базами данных, созданными в программе Access</p>
+  <p>Группа компонентов для работы с отчетами по базам данных и создания макросов.</p>
+  <p>Группа компонентов Excel для работы с электронными таблицами.</p>
+  <p>Группа компонентов PowerPoint могут работать с презентациями, слайдами или мастерами.</p>
+  <p>Компонент Outlook для работы с электронной почтой.</p>
+</article>
+
+
+<!-- Урок 3 -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>Урок 3</h3>
+
+  <h4>3.1 Object Inspector инспектор объектов</h4>
+  <p>Инспектор объектов предназначен для редактирования свойств объектов на стадии разработки программы. Тем самым определяя начальное состояние компонентов. Окно инспектора содержит две закладки Properties и Events.</p>
+  <p>Закладка Properties содержит все свойства активного элемента и позволяет задавать их начальные значения. Она разбита на два поля. Слева написаны названия свойства. Значек плюс значит, что у свойства внутри есть еще свойства, которые можно раскрыть.</p>
+  <p>В верхней части инспектора объектов распложен селектор объектов. При первом запуске в нем отображается название главной формы. И именно ее свойства становятся доступными для редактирования. Свойства в закладке Properties:</p>
+  <ol>
+    <li>Caption заголовок выводится в заголовок компонента.</li>
+    <li>Color цвет, которым отображается компонент. Цвет можно изменить используя выпадающий список в правой части окна.</li>
+    <li>Name имя для обращения к компоненту в программе. Его желательно не изменять</li>
+    <li>Visible видимость управляет отображением компонента</li>
+  </ol>
+
+  <h4>3.2 Закладка Events инспектора объектов</h4>
+  <p>На закладке Events инспектора объектов отображаются все события на которые может реагировать компонент. Данная закладка разбита на две части. В левой отображаются названия событий. В правой отображаются названия функций и методов, которые обрабатывают события.</p>
+  <p>Чтобы задать обработчик события надо щелкнуть левой кнопкой мыши на названии события. В правой части появится выпадающее меню где можнго выбрать функцию или метод. При первом запуске в этом меню ничего нет так как еще не созданы функции-обработчики. Чтобы создать новую функцию надо дважды щелкнуть в правой части закладки напротив выбранного события. При этом откроется редактор кода, в котором автоматически генерируется заголовок функции, в которую нужно ввести программный код.</p>
+  <p>Рассмотрим основные события</p>
+  <ol>
+    <li>OnClick обрабатывает щелчок мыши</li>
+    <li>OnClose обрабатывает событие при закрытии окна программы</li>
+    <li>OnCreate обрабатывает событие при создании формы</li>
+    <li>OnKeyDown обрабатывает нажатие клавиши на клавиатуре</li>
+    <li>OnResize обрабатывает изменение размеров формы</li>
+    <li>OnPaint обрабатывает событие при перерисовке графического образа формы</li>
+  </ol>
+
+  <h4>3.3 главное меню</h4>
+  <p>Элемент главного меню есть почти у всех программ, работающих в ОС Windows. Для его создания предназначен компонент MainMenu, который располагается на закладке Standart палитры компонентов. После помещения компонента на форму, необходимо настроить пункты меню. В инспекторе объектов нажмите на название свойства Items, а затем на кнопке с тремя точками в правой части окна. Появится окно дизайнера меню. В инспекторе объектов появятся дополнительные свойства.</p>
+  <p>В свойстве Caption вводятся названия пунктов меню. Также в свойстве Caption задаются названия пунктов подменю. Чтобы разделить несколько команд подменю на группы, надо ввести в поле Caption минус. После завершения надо закрыть окно дизайнера меню.</p>
+  <p>Чтобы подключить к пунктам меню функции, надо щелкнуть на названии пункта и выбрать команду, щелкнув по ней левой кнопкой мыши. Появится окно редактора кода с готовой оболочкой функции. Остается только ввести исполняемый код.</p>
+
+  <h4>3.4 текстовая метка и текстовая строка ввода</h4>
+  <p>Для создания текстовой метки и текстовой строки ввода служат компоненты Label и Edit. Часто эти два компонента используются совместно для создания полей ввода информации. Перетащим их на форму.</p>
+  <p>Щелкним по элементу Lebel и в инспекторе объектов в свойстве Caption изменим текст метки. В свойстве Font расположены свойства шрифта. Можно изменить цвет в свойстве Color, изменить шрифт в свойстве Name, изменить размер шрифта в свойстве Size.</p>
+  <p>Щелкнем по элементу Edit и в инспекторе объектов в свойстве Text изменим текст в строке ввода. Текст можно скрыть символами, которые задаются в свойстве PasswordChar.</p>
+
+  <h4>3.5 компонент memo</h4>
+  <p>С помощью компонента memo создается прямоугольная область многострочного ввода. В инспекторе объектов в свойстве Lines можно набрать строки текста которые будут внутри компонента memo. Свойство ScrollBars добавляет линейки прокрутки.</p>
+
+  <h4>3.6 кнопки Button и BitBtn</h4>
+  <p>Компонент Button может менять свои размеры. Изменить надпись на кнопки можно с помощью свойства Caption. При двойном щелчке на кнопке открывается редактор кода, в котором автоматически создается функция обработчик события нажатия на кнопку.</p>
+  <p>Компонент BitBtn. Для добавления изображения на кнопку предназначено свойство Glyph. Для добавления надписи на кнопку предназначено свойство Caption. При двойном щелчке на кнопке открывается редактор кода, в котором автоматически создается функция обработчик события нажатия на кнопку.</p>
+
+  <h4>3.7 компоненты CheckBox и RadioButton</h4>
+  <p>Компонент CheckBox представляет собой прямоугольную область с двумя состояниями. Для задания надписи предназначено свойство Caption. Для задания галочки предназначено свойство Checked</p>
+  <p>Компонент RadioButton отличается от CheckBox тем, что элементов RadioButton должно быть несколько и выбрать можно только один из них. Один из элементов RadioButton обязательно должен быть выбран.</p>
+
+  <h4>3.8 Компоненты ListBox и ComboBox</h4>
+  <p>Добавим на форму компонент ListBox. Свойство Items предназначено для добавления элементов списка.</p>
+  <p>Добавим на форму компонент ComboBox. Свойство Items предназначено для добавления элементов списка.</p>
+
+  <h4>3.9 Компоненты Image и ImageList</h4>
+  <p>Добавим на форму компонент Image. Свойство Picture предназначено для загрузки изображения в компонент. Свойство AutoSize автоматически подстроит размеры области под размеры рисунка. Свойство Stretch автоматически растянет размеры изображения до размера области.</p>
+  <p>Добавим на форму компонент ImageList. В него можно загрузить несколько рисунков одинакового размера. Размеры рисунков определяются свойствами Width и Height. Выбрать изображение можно двойным щелчком по компоненту.</p>
+
+  <h4>3.10 Компонент MediaPlayer</h4>
+  <p>Добавим на форму компонент MediaPlayer. Состав кнопок медиаплеера можно менять, удаляя ненужные кнопки. Свойство DeviceType определяет тип устройства для медиаплеера. Значение AutoSelect означает что компонент подстроится под заданный тип файла. Для выбора типа файла служит свойство FileName. Этот файл будет загружен на стадии проектирования. Во время работы приложения файл можно поменять с помощью свойства FileName. Свойство AutoOpen позволяет автоматически воспроизводить открытие файла методом Open. Свойство VisibleButton позволяет сделать невидимыми ненужные кнопки. Свойство EnableButton позволяет заблокировать ненужные кнопки.</p>
+</article>
+
+
+<!-- Урок 4 -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Урок 4</h3>
+
+  <h4>4.1 добавление компонентов на форму</h4>
+  <p>Первым шагом при создании приложения является определения состава необходимых компонентов. Создадим свой текстовый редактор. Для этого поместим на форму следующие компоненты:</p>
+  <ol>
+    <li>область для текста Memo</li>
+    <li>главное меню MainMenu</li>
+    <li>три кнопки Button для открытия и сохранения файла и настройки шрифта</li>
+    <li>диалог для открытия файла OpenDialog</li>
+    <li>диалог для сохранения файла SaveDialog</li>
+    <li>диалог для настройки шрифта FontDialog</li>
+    <li>контекстное меню PopupMenu, которое будет дублировать функции главного меню</li>
+  </ol>
+
+  <h4>4.2 настройка добавленных компонентов</h4>
+  <p>Настроим свойства формы. В свойстве Caption напишем название нашего редактора TextEditor. В свойствах ClientHeight и ClientWidth зададим размер формы. В свойстве Position установим значение poDesigned для того чтобы при запуске приложение распологалось по центру экрана.</p>
+  <p>Настроим компонент MainMenu.</p>
 </article>
