--- a/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
@@ -41,6 +41,7 @@
   <p><a href="lec-2ap.html" class="js-vgu2025-cpp">(10.11.2025 пн) 1гр Практика по занятию 2. Наследование</a></p>
   <p><a href="lec-3a.html" class="js-vgu2025-cpp">(11.10.2025 вт) 1гр Занятие 3. Паттерны</a></p>
   <p><a href="lec-3bp.html" class="js-vgu2025-cpp">(13.11.2025 чт) 2гр Практика по занятию 3. Многопоточность</a></p>
+  <p><a href="lec-4b.html" class="js-vgu2025-cpp">(14.11.2025 пт) 2гр Занятие 4. Тестирование</a></p>
   <p><a href="m1.html" class="js-vgu2025-cpp">Конспект методички ч1</a></p>
   <p><a href="m2.html" class="js-vgu2025-cpp">Конспект методички ч2</a></p>
 </article>
