--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -30,7 +30,7 @@
   <h4>Библиотека STL</h4>
   <p>Программисту при написании программ требуется набор стандартных компонентов. Например, компонент для хранения данных. А именно деревья, связанные списки, динамические массивы. Это сложные структуры данных. Чтобы каждый раз не изобретать велосипед и не писать эти компоненты самому с нуля, они включены в стандартную библиотеку.</p>
 
-  <h4>Программа, состоящая из нескольких файлов</h4>
+  <h3>Тема 1. Программа, состоящая из нескольких файлов</h3>
 
   <p>Для начала немного истории. В 1970 году в Bell Labs Кен Томпсон и Ден Ритчи решают задачу написать переносимую операционную систему. Было несколько моделей компьютеров с разным набором регистров, которые по разному назывались. Для этой цели они разработали язык Си, а операционная система называлась Unix.</p>
   <p>К языку Си предъявлялись требования: он должен быть таким же эффективным как язык ассемблера, на нем должно быть более удобно программировать чем на языке ассемблера, должна быть переносимость на уровне исходных текстов программ. Это значит что для каждой новой платформы достаточно написать компилятор языка Си и тогда на ней можно написать все программы на языке Си, которые уже были написаны для других платформ.</p>
@@ -276,8 +276,181 @@ clean:
   <code>make clean</code>
 
   <h4>Библиотека STL</h4>
-  <p>Библиотека это набор объектных файлов. Это файл в котором склеено много объектных файлов. Есть два вида библиотек: статические (в линуксе имеют расширение .a от слова archive)</p>
-  <p>Статическая библиотека присоединяется к объектному файлу. Файл libc.a представляет собой архив объектных файлов. Когда линковщик встречает функцию из стандартной библиотеки, он достает из нее объектный файл этой функции и пакует вместе с остальными файлами в исполняемый файл.</p>
+  <p>Библиотека это набор объектных файлов. Это файл в котором склеено много объектных файлов. Есть два вида библиотек: <strong>статические</strong> и <strong>динамические</strong>.</p>
+  <p><strong>Статическая библиотека</strong> в линуксе имеет расширение .a от слова archive, в Windows имеет расширение .lib от слова library. Статическая библиотека присоединяется к объектному файлу. Файл <strong>libc.a</strong> представляет собой архив объектных файлов. Когда линковщик встречает функцию из стандартной библиотеки, он достает из нее объектный файл этой функции и пакует вместе с остальными файлами в исполняемый файл.</p>
   <p>Недостаток статической линковки: размер у получившегося файла вырастает.</p>
   <p>Достоинство статической линковки: когда мы запускаем программу на другом компьютере, то к нему нет требований, чтобы он содержал какие-либо библиотеки, потому что все необходимые библиотеки уже зашиты в программе.</p>
+  <p><strong>Динамическая библиотека</strong> в линуксе имеет расширение .so от слов shared of object, в Windows имеет расширение .dll. Файл <strong>libc.so</strong>. Никаких новых объектных файлов к программе не присоединяется. В операционной системе есть специальный компонент загрузчик динамических библиотек. Когда программа запускается, он из ее заголовка понимает какие библиотеки должны быть загружены в память, обеспечивает их загрузку и связь с функциями из программы.</p>
+  <p>Недостаток динамической линковки: на другой машине будет работать только если там есть файл lib.so. Такие библиотеки могут обновляться в операционной системе. Например, для исправления багов и при выходе новых версий. Отсюда второй недостаток: ваши программы могут требовать разных версий библиотек.</p>
+  <p>Достоинство динамической линковки: занимает меньше места.</p>
+  <p>gcc это семейство компиляторов. Для языка Си, Pascal, C++. Какой компилятор нужно запускать, он понимает по расширению файла.</p>
+  <p>В следующем случае запустится компилятор gcc для языка Си</p>
+  <code>gcc -c file.c</code>
+  <p>В следующем случае запустится компилятор g++ для языка C++</p>
+  <code>gcc -c file.cpp</code>
+  <p>g++ это компилятор для C++, он уже не смотрит на расширение файла и любой файл компилирует по правилам C++</p>
+  <code>g++ -c file.c</code>
+  <code>g++ -c file.cpp</code>
+  <p>Библиотека libc всегда подключается автоматически. По умолчанию используется динамическая линковка и динамические библиотеки. Если нужно провести статическую сборку, то надо добавить ключ -static</p>
+  <code>gcc -c -static file.c</code>
+  <p>Библиотека stl хранится в файле libstdc++. В линуксе лежит в каталоге /usr/lib. При компиляции компилятором g++, она подключается по умолчанию. При компиляции компилятором gcc библиотеку нужно подключить после ключа -l без пробела.</p>
+  <code>gcc -lstdc++</code>
+
+  <h3>Тема 3. Указатели</h3>
+
+  <h4>Массивы</h4>
+
+  <p>Оъявление статического массива на 10 элементов типа int. В квадратных скобках должна быть константа. Размер массива определяется на этапе компиляции.</p>
+  <code>int array[10];</code>
+  <p>В памяти будет выделено место для размера массива в байтах.</p>
+  <code>sizeof(array); // 40 байт</code>
+  <p>Посчитаем размер массива в элементах.</p>
+  <code>sizeof(array) / sizeof(array[0]); // 10 элементов</code>
+  <p>Способ инициализации массива через фигурные скобки</p>
+  <code>int array[10] = {0,1,2,3,4,5,6,7,8,9};</code>
+  <p>При такой инициализации, можно не указывать размер массива в квадратных скобках, потому что его компилятор вычислит автоматически по числу задаваемых значений.</p>
+  <code>int array[] = {0,1,2,3,4,5,6,7,8,9};</code>
+  <p>Можно инициализировать все элементы одним значением</p>
+  <code>int array[10] = {0};</code>
+  <p>Создадим статический массив на 5 элементов типа char.</p>
+  <code>char array[] = {'H','e','l','l','o'};</code>
+  <p>Создадим строку, содержащуюся в статическом массиве из 6 элементов типа char. В массиве будет на 1 элемент больше, за счет того, что для строк компилятор автоматически добавляет последним символом символ терминатор '\0'.</p>
+  <code>char str[] = "Hello";</code>
+
+  <h4>Двумерные массивы</h4>
+  <code>int M[2][2];</code>
+  <code>int M[2][2] = { {1,2},{3,4} };</code>
+
+  <h4>Индексы массива</h4>
+  <p>Выход за границы массива ни во время компиляции ни во время выполнения программы не котролируется.</p>
+
+  <h4>Указатели</h4>
+<pre>
+int *p;
+int a;
+p = &amp;a; // взятие адреса переменной
+int b = *p; // разименование указателя
+</pre>
+  <p>В результате в переменной b будет то же самое что и в переменной a.</p>
+  <p>Размер указателя связан с разрядностью машины. На 32-битной машине размер указателя равен 4 байта. Посмотрим на адрес в переменной p</p>
+  <code>printf("%p",p);</code>
+
+  <h4>Связь указателей и массивов</h4>
+<pre>
+char array[10];
+char *p;
+p = &array[0];
+p = array;
+</pre>
+
+  <p>Имя массива является указателем на его начало.</p>
+
+  <h4>Арифметика указателей</h4>
+<pre>
+int i[10];
+char c[10];
+int *pi = &i[0];
+char *pc = &c[0];
+pi += 1;
+ci += 1;
+</pre>
+
+  <p>Запись вида i[3] компилятор преобразует в *(i+3). Тогда и запись вида 3[i] компилятор преобразует в *(i+3). При работе с массивами, компилятор на самом деле работает с указателями и с памятью.</p>
+  <p>Складывать указатели нельзя, но вычитать можно.</p>
+
+  <h4>Различие между указателями разных типов</h4>
+</article>
+
+
+<!-- Урок 3 -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>Урок 3</h3>
+
+  <h4>Применение указателей</h4>
+  <ol>
+    <li>Поменять местами две переменные
+      <code>void swap(int *a, int *b);</code>
+    </li>
+    <li>Передача массивов в функцию</li>
+    <li>Быстродействие
+      <code>while (*p) p++;</code>
+      вместо
+      <code>while (p[i]) p++;</code>
+    </li>
+  </ol>
+
+  <h4>Ссылки</h4>
+  <p>После указателей в язык C++ ввели новую сущность - <strong>ссылки</strong>.</p>
+  <p>До появления ссылок можно было с помощью указателей поменять две переменные местами.</p>
+<pre>
+void swap(int *a, int *b) {
+  int tmp = *a;
+  *a = *b;
+  *b = tmp;
+}
+
+int main() {
+  int x = 3;
+  int y = 5;
+  swap(&x, &y);
+}
+</pre>
+
+  <p>Теперь в C++ появился такой синтаксис, который позволяет эту запись упростить.</p>
+<pre>
+void swap(int &a, int &b) {
+  int tmp = a;
+  a = b;
+  b = tmp;
+}
+
+int main() {
+  int x = 3;
+  int y = 5;
+  swap(x, y);
+}
+</pre>
+  <p>Здесь int &a это ссылка на переменную типа int. В момент компиляции ссылки внутри функции заменятся на указатели.</p>
+  <p>У ссылок есть два отличия от указателей.</p>
+  <ol>
+    <li>Ссылка не может быть неинициализирована. Нельзя написать int &amp;a;</li>
+    <li>Ссылка не может быть равна NULL. Нельзя написать int &a = NULL;</li>
+  </ol>
+  <p>Ссылки ничего нового в язык C++ не принесли. Просто изменилась запись на более понятную.</p>
+  <p>Теперь амперсанд используется для двух разных вещей. Это взятие адреса переменных int *p = &a и ссылка на переменную f(int &a).</p>
+
+  <h4>Глобальная память</h4>
+  <p>Переменные объявленные за пределами функций называются глобальными. Сколько памяти выделять глобальным переменным, определяет компилятор в момент компиляции. При загрузке программы в память, сразу загружаются в память все ее глобальные переменные. Если в памяти не хватает места для всех глобальных переменных, то программа не загрузится.</p>
+  <p>Если программа состоит из нескольких файлов: main.cpp и hello.cpp.</p>
+
+  <p>Файл main.cpp</p>
+<pre>
+int main() {
+  a = 5;
+}
+</pre>
+
+  <p>Файл hello.cpp</p>
+<pre>
+int a = 3;
+void hello() {}
+</pre>
+  <p>В этом коде есть проблема. В языке Си компиляция файлов раздельная. При компиляции main() компилятор не знает откуда брать переменную a.</p>
+  <p>Файл main.cpp</p>
+<pre>
+#include "hello.h"
+
+int main() {
+  a = 5;
+}
+</pre>
+
+  <p>Файл hello.h</p>
+<pre>
+#ifndef _h_h_
+int a = 3;
+void hello() {}
+#endif
+</pre
 </article>
